--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-
+import TestMe from "./TestMe.astro";
 ---
 
 <header>
@@ -15,7 +15,7 @@
                 </li>
                 <li class="nav_li w-64 flex-1"></li>
                 <li class="nav_liw-64 flex-1"></li>
-                <li class="w-64 flex-1"></li>
+                <li class="w-24 flex-1"></li>
                 <li class="w-44 flex-1">
                     <p>
                         PYTHON DEVELOPER AND DIGITAL ARTIST, MEXICAN BASED IN
@@ -23,6 +23,12 @@
                         TECHNOLOGY INDUSTRY TO GRAB THE ART MATCH CODE.
                     </p>
                     <div></div>
+                </li>
+                <li class="w-30 flex-1 pl-10 pt-3">
+                    <button
+                        class="outline outline-offset-2 rounded-b-sm margin-6px transition delay-150 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500"
+                        >LOGIN</button
+                    >
                 </li>
             </ul>
         </nav>
@@ -44,6 +50,9 @@
             <div class="flex flex-col p-2">
                 <img
                     src="./profile.jpg"
+                    ,
+                    alt="Profile"
+                    ,
                     class="size-45 aspect-2/3 grayscale rounded-t-lg"
                 />
                 <p class="underline decoration-pink-500 animate-pulse">
@@ -54,6 +63,10 @@
                 <p class="flex flex-col p-2 relative top-30">
                     <span>CINEMATOGRAPHER</span>
                 </p>
+                <!-- Aquí se ubica correctamente el TestMe -->
+                <!-- <div class="flex justify-center items-center pt-4">
+                    <TestMe />
+                </div>-->
             </div>
         </div>
     </div>
