--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -64,9 +64,9 @@ import TestMe from "./TestMe.astro";
                     <span>CINEMATOGRAPHER</span>
                 </p>
                 <!-- Aquí se ubica correctamente el TestMe -->
-                <!-- <div class="flex justify-center items-center pt-4">
+                <div class="flex justify-center items-center pt-4">
                     <TestMe />
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
