--- a/frontend/src/components/Hero.astro
+++ b/frontend/src/components/Hero.astro
@@ -53,7 +53,7 @@ import TestMe from "./TestMe.astro";
                     ,
                     alt="Profile"
                     ,
-                    class="size-45 aspect-2/3 grayscale rounded-t-lg"
+                    class="size-60 w-auto grayscale rounded-t-lg"
                 />
                 <p class="underline decoration-pink-500 animate-pulse">
                     [ 11111989 ]
@@ -64,9 +64,9 @@ import TestMe from "./TestMe.astro";
                     <span>CINEMATOGRAPHER</span>
                 </p>
                 <!-- Aquí se ubica correctamente el TestMe -->
-                <div class="flex justify-center items-center pt-4">
+                <!--<div class="flex justify-center items-center pt-4">
                     <TestMe />
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
