--- a/frontend/src/components/Projects.astro
+++ b/frontend/src/components/Projects.astro
@@ -21,7 +21,7 @@ const projects = await getCollection("projects");
                         const { title, description, url, techStack } = data;
 
                         return (
-                            <article class="card  bg-white rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                            <article class="card   rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
                                 <div class="p-6">
                                     <h3 class="text-xl font-semibold mb-2">
                                         {title}
@@ -42,11 +42,11 @@ const projects = await getCollection("projects");
 
                                     <a
                                         href={url}
-                                        class="inline-block bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition-colors duration-300"
+                                        class="inline-block bg-gray-700 text-white px-4 py-2 rounded-md hover:bg-gray-500 transition-colors duration-300"
                                         target="_blank"
                                         rel="noopener noreferrer"
                                     >
-                                        Ver Proyecto →
+                                        Read more →
                                     </a>
                                 </div>
                             </article>
